--- a/slides/welcome.html
+++ b/slides/welcome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>臺大開源社迎新茶會</title>
     <meta charset="utf-8">
     <style>
       @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -43,14 +43,22 @@ layout: true
 ![Imgur](http://i.imgur.com/qiyJieh.jpg?1)
 
 ---
+## 開源社是賣雞排的嗎？
+
+# .center[ No ]
+
+--
+### .center[迎新茶會不提供雞排]
+
+---
 ---
 ## 開源社會教人理財嗎？
 
 --
-- ### 不會
+# .center[不會]
 
 --
-- ### 請洽臺大證券研究社
+### .center[請洽臺大證券研究社]
 
 ---
 ---
@@ -70,12 +78,103 @@ layout: true
 - ### [用 LEGO 解釋 Open Source](https://youtu.be/a8fHgx9mE5U)
 
 ---
+## 開源很常見嗎？
+
+--
+# .center[ Yes ]
+
+--
+## Android,  
+--
+iOS, 
+--
+OS X
+
+--
+## Firefox, 
+--
+Chrome, 
+--
+Safari, 
+--
+PCMan
+
+--
+## PTT
+
+---
 ## 所以，你們是在寫程式的社團？
 
 --
 # .center[ Yes ]
 
 ---
+## 我什麼都不會，會不會難以融入阿？
+
+--
+# .center[ No!! ]
+
+--
+- ### 社課
+--
+
+ - #### 深入淺出
+
+--
+- ### 社聚
+--
+
+ - #### 專案分享
+
+---
+---
+## 社團很少發文？
+
+--
+### [Slack (ntuosc.slack.com)](https://ntuosc.slack.com)
+
+--
+### [Hackpad (ntuosc.hackpad.com)](https://ntuosc.hackpad.com)
+--
+  - [Paper](https://paper.dropbox.com/)
+
+--
+### [官網 (ntuosc.org)](http://ntuosc.org)
+
+---
+## 社費多少？
+
+--
+# .center[ 0 元！]
+
+--
+### .center[歡迎捐款]
+
+---
+---
+## 你們是不是都是怪人阿？
+
+--
+.center[ ...QQ ]
+
+---
+---
+## 你們有人是駭客嗎？
+
+--
+### .center[ 有 ]
+
+---
+---
+## 你們有人會寫 App 嗎？
+
+--
+### .center[ 有 ]
+
+---
+layout: false
+class: center middle
+# .center.middle[Q&A]
 
     </textarea>
     <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
