alter order on last few slides

--- a/slides/welcome.html
+++ b/slides/welcome.html
@@ -40,7 +40,7 @@ layout: true
 ## 開源社是賣雞排的嗎？
 
 --
-![Imgur](http://i.imgur.com/qiyJieh.jpg?1)
+.center[ ![Imgur](http://i.imgur.com/qiyJieh.jpg?1) ]
 
 ---
 ## 開源社是賣雞排的嗎？
@@ -84,7 +84,9 @@ layout: true
 # .center[ Yes ]
 
 --
-## Android,  
+## Linux, 
+--
+Android,  
 --
 iOS, 
 --
@@ -100,7 +102,11 @@ Safari,
 PCMan
 
 --
-## PTT
+## PTT, 
+--
+Hackpad
+--
+...
 
 ---
 ## 所以，你們是在寫程式的社團？
@@ -118,13 +124,17 @@ PCMan
 - ### 社課
 --
 
- - #### 深入淺出
+ - #### 每星期五
+--
+ - 深入淺出
 
 --
 - ### 社聚
 --
 
- - #### 專案分享
+ - #### 不固定期間
+--
+ - 聊天、吃吃喝喝、專案分享
 
 ---
 ---
@@ -151,12 +161,14 @@ PCMan
 ### .center[歡迎捐款]
 
 ---
----
-## 你們是不是都是怪人阿？
+## 外校可以參加嗎？
 
 --
-.center[ ...QQ ]
+### .center[完全歡迎]
 
+---
+class: middle
+### 其他常見問題
 ---
 ---
 ## 你們有人是駭客嗎？
@@ -170,6 +182,13 @@ PCMan
 
 --
 ### .center[ 有 ]
+
+---
+---
+## 你們是不是都是怪人阿？
+
+--
+.center[ ...QQ ]
 
 ---
 layout: false
