--- a/slides/IM_slides.html
+++ b/slides/IM_slides.html
@@ -8,9 +8,9 @@
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
 @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
 
-body { font-family: 'Droid Serif'; }
+body { font-family: "source-han-sans-traditional", 'Droid Serif'; }
 h1, h2, h3 {
-	font-family: 'Yanone Kaffeesatz';
+	font-family: 'Yanone Kaffeesatz', "source-han-sans-traditional";
 	font-weight: normal;
 }
 .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
@@ -45,7 +45,7 @@ h1, h2, h3 {
 			# Introduction
 			## 背後發生了什麼事？
 			* 世界上所有電腦在網路上都有一個位址，我們稱為 IP 位址，一般會用四組介於 0~255 的數字表示
-			* 例如台大資管的網址對應到的 IP 位址就是
+			* 例如台大資管的網址 `im.ntu.edu.tw` 對應到的 IP 位址就是 `140.112.106.2`
 			* 輸入網址時，網址被瀏覽器轉換成 IP 位址
 
 
@@ -59,5 +59,7 @@ h1, h2, h3 {
 		<script>
 var slideshow = remark.create();
 		</script>
+<script src="https://use.typekit.net/pes4har.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
 	</body>
 </html>
