add a little bit IM slides

--- a/slides/IM_slides.html
+++ b/slides/IM_slides.html
@@ -422,6 +422,9 @@ h1, h2, h3 {
 			</div>
 			```
 
+			#### 官網有更多樣式詳細的文件說明
+			可以試著學習閱讀文件，有助於了解更多樣式的寫法及組合方式
+
 			---
 
 			class: center, middle
@@ -440,9 +443,11 @@ h1, h2, h3 {
 
 			[HTML5 UP](http://html5up.net) - 許多簡潔又用途十分廣泛的樣板
 
-			大部分的樣板也是基於許多框架寫成的，因此了解框架的架構與概念、並學習如何使用，都有助於理解這些樣板的程式碼，才能再加以做出大幅度修改。如果只是改改圖片與文字，大多的網站便會長的如出一轍，失去了原創性跟開發者掌握網頁的能力。
+			大部分的樣板也是基於許多框架寫成的，因此了解框架的架構與概念、並學習如何閱讀文件並使用，都有助於理解這些樣板的程式碼，才能再加以做出大幅度修改。如果只是改改圖片與文字，大多的網站便會長的如出一轍，失去了原創性跟開發者掌握網頁的能力。
 
 			---
+
+			class: center, middle
 
 			# The End
 			## Q & A
