--- a/slides/IM_slides.html
+++ b/slides/IM_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Title</title>
+		<title>臺大資管營 2016 網頁課程投影片</title>
 		<meta charset="utf-8">
 		<style>
 @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
@@ -21,11 +21,11 @@ h1, h2, h3 {
 
 			class: center, middle
 
-			# 資管營網頁課程
+			# 好棒棒資管營網頁課程
 
 			---
 
-			# Who am I?
+			# Who am I
 			### 資管二 林子期
 
 			![](viktor.jpg)
@@ -236,13 +236,14 @@ h1, h2, h3 {
 
 			# CSS
 			### 選擇網頁上的一個元素，並賦予它想要的樣式。
-			#### CSS 範例：
 				
 			```CSS
 			selector {
 			    property: value;
 			}
 			```
+
+			#### CSS 範例：
 
 			```HTML
 			<p style="color: red">變色的字</p>
@@ -311,7 +312,7 @@ h1, h2, h3 {
 
 			# CSS Box Model
 
-			HTML 元素在畫面上所佔的空間
+			#### HTML 元素在畫面上所佔的空間
 
 			* 一個元素的高與寬能用 `height` 及 `weight` 修改
 			* 一個元素的 Box Model 可以分為元素內容、padding、border、margin 四個部分
@@ -357,7 +358,7 @@ h1, h2, h3 {
 			background-position: center center; 
 			```
 
-			MDN - 查詢各式屬性語法及概念解說的好地方
+			[MDN](https://developer.mozilla.org/zh-TW/) - 查詢各式屬性語法及概念解說的好地方
 
 			---
 
