--- a/slides/IM_slides.html
+++ b/slides/IM_slides.html
@@ -14,6 +14,14 @@ h1, h2, h3 {
 	font-weight: normal;
 }
 .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
+img[src="viktor.jpg"] {
+	width: 40%;
+	height: 40%;
+}
+img[src="elantris.jpg"] {
+	width: 50%;
+	height: 50%;
+}
 		</style>
 	</head>
 	<body>
@@ -26,9 +34,13 @@ h1, h2, h3 {
 			---
 
 			# Who am I
-			### 資管二 林子期
+			### 資管二->三 林子期
 
 			![](viktor.jpg)
+
+			---
+			# Who am I
+			### 資管二->三 許承佑
 
 			![](elantris.jpg)
 
